--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,26 @@
 version: '3'
 
 services:
+  reverse_proxy:
+    build:
+      context: nginx
+    container_name: nginx
+    networks:
+      - nodenet
+    ports:
+      - "8080:80"
+    depends_on:
+      - app
+
   app:
     build:
       context: node
     container_name: app
-    #entrypoint: dockerize -wait tcp://db:3306 -timeout 20s docker-entrypoint.sh
+    entrypoint: dockerize -wait tcp://db:3306 -timeout 20s docker-entrypoint.sh
+    command: node index.js
     networks:
       - nodenet
     tty: true
-    ports:
-      - "3000:3000"
-    volumes:
-      - ./node:/usr/src/app
     depends_on:
       - db
 
@@ -23,20 +31,13 @@ services:
     restart: always
     tty: true
     volumes:
-      - ./mysql:/var/lib/mysql
       - ./db-init.sql:/docker-entrypoint-initdb.d/1.sql
     environment:
       - MYSQL_DATABASE=nodedb
       - MYSQL_ROOT_PASSWORD=root
     networks:
       - nodenet
-  #nginx:
-  #  image: nginx
-  #  networks:
-  #    - nodenet
-  #  ports:
-  #    - "8080:80"
-
+  
 networks:
   nodenet:
     driver: bridge
