--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,12 @@
 version: '3'
 
 services:
-  reverse_proxy:
-    build:
-      context: nginx
-    container_name: nginx
-    networks:
-      - nodenet
-    ports:
-      - "8080:80"
-    depends_on:
-      - app
 
   app:
     build:
       context: node
     container_name: app
-    entrypoint: dockerize -wait tcp://db:3306 -timeout 20s docker-entrypoint.sh
+    entrypoint: dockerize -wait tcp://db:3306 -timeout 20s
     command: node index.js
     networks:
       - nodenet
@@ -37,7 +27,18 @@ services:
       - MYSQL_ROOT_PASSWORD=root
     networks:
       - nodenet
-  
+
+  reverse_proxy:
+    build:
+      context: nginx
+    container_name: nginx
+    networks:
+      - nodenet
+    ports:
+      - "8080:80"
+    depends_on:
+      - app
+
 networks:
   nodenet:
     driver: bridge
